// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders with a label 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-space--x2 ax-text--size-body"
  >
    Lorem ipsum
  </div>
  <textarea
    className="ax-textarea"
    disabled={undefined}
    placeholder={undefined}
    style={
      Object {
        "minHeight": 150,
      }
    }
    value={undefined}
  />
</label>
`;

exports[`TextArea renders with custom height 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <textarea
    className="ax-textarea"
    disabled={undefined}
    placeholder={undefined}
    style={
      Object {
        "minHeight": 300,
      }
    }
    value={undefined}
  />
</label>
`;

exports[`TextArea renders with defaultProps 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <textarea
    className="ax-textarea"
    disabled={undefined}
    placeholder={undefined}
    style={
      Object {
        "minHeight": 150,
      }
    }
    value={undefined}
  />
</label>
`;
